/*
 * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

/*
 * Protos for serializing Tribuo's OCI classes.
 */
package tribuo.interop.oci;

option java_multiple_files = true;
option java_package = "org.tribuo.interop.oci.protos";

// We use any to encode polymorphism
import "google/protobuf/any.proto";

// Import Tribuo's core protos
import "tribuo-core.proto";

/*
OCIOutputConverter redirect proto
 */
message OCIOutputConverterProto {
  int32 version = 1;
  string class_name = 2;
  google.protobuf.Any serialized_data = 3;
}

/*
OCILabelConverter proto
 */
message OCILabelConverterProto {
  bool generates_probabilities = 1;
}

/*
OCIMultiLabelConverter proto
 */
message OCIMultiLabelConverterProto {
  bool generates_probabilities = 1;
  double threshold = 2;
}

/*
OCIModel proto
 */
message OCIModelProto {
  tribuo.core.ModelDataProto metadata = 1;
  repeated int32 forward_feature_mapping = 2;
  repeated int32 backward_feature_mapping = 3;
  string config_file = 4;
  string profile_name = 5;
  string endpoint_url = 6;
  string model_deployment_id = 7;
  OCIOutputConverterProto output_converter = 8;
}
